--- a/Web/Web.config
+++ b/Web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="AppContext" connectionString="Server=10.2.1.34;Port=5432;User Id=postgres;Password=Ay0k@Systems$$;Database=BaseProject" providerName="Npgsql"/>
+    <add name="AppContext" connectionString="Server=localhost;Port=5432;User Id=postgres;Password=TorrieM2;Database=bookme_development" providerName="Npgsql"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
@@ -27,7 +27,7 @@
   -->
   <system.web>
     <authentication mode="None"/>
-    <compilation debug="true" targetFramework="4.6.2"/>
+    <compilation debug="true" targetFramework="4.5.1"/>
     <httpRuntime targetFramework="4.5"/>
     <httpModules/>
   </system.web>
